More verbose cross validation loop.

--- a/hw1_1.ipynb
+++ b/hw1_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter \t lambda \t lr \t\t train acc \t val acc \t val f1 \n",
+      "0 \t 0.00887 \t 0.71032 \t 0.58 \t\t 0.56 \t\t 0.72\n",
+      "1 \t 0.00001 \t 0.00047 \t 0.49 \t\t 0.37 \t\t 0.40\n",
+      "2 \t 0.00002 \t 0.00023 \t 0.52 \t\t 0.47 \t\t 0.57\n"
+     ]
+    }
+   ],
    "source": [
     "num_cross_val = 100\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "epochs = 100\n",
     "verbose = False\n",
     "\n",
@@ -225,6 +236,9 @@
     "best_lambda = 0\n",
     "best_lr = 0\n",
     "\n",
+    "hyperparams = []\n",
+    "\n",
+    "print('Iter \\t lambda \\t lr \\t\\t train acc \\t val acc \\t val f1 ')\n",
     "for i in range(num_cross_val):\n",
     "    lambda_ = lambdas[i]\n",
     "    lr = lrs[i]\n",
@@ -233,18 +247,22 @@
     "    mlr.fit(X_train, y_train)\n",
     "    y_pred = mlr.predict(X_val)\n",
     "    \n",
-    "    acc = accuracy_score(y_val, y_pred)\n",
+    "    val_acc = accuracy_score(y_val, y_pred)\n",
+    "    f1 = f1_score(y_val, y_pred)\n",
     "    \n",
-    "    if acc > best_acc:\n",
-    "        best_acc = acc\n",
-    "        best_lambda = lambda_\n",
-    "        best_lr = lr\n",
+    "    train_acc = accuracy_score(y_train, mlr.predict(X_train))\n",
     "        \n",
-    "hyperparams = {\n",
-    "    'lambda' : best_lambda,\n",
-    "    'lr' : best_lr\n",
-    "}\n",
-    "\n",
+    "    hyperparams.append(\n",
+    "        {\n",
+    "            'lambda' : lambda_,\n",
+    "            'lr' : lr,\n",
+    "            'train_acc' : train_acc,\n",
+    "            'val_acc' : val_acc,\n",
+    "            'f1' : f1\n",
+    "        }\n",
+    "    )    \n",
+    "    print('%d \\t %0.5f \\t %0.5f \\t %0.2f \\t\\t %0.2f \\t\\t %0.2f' % (i, lambda_, lr, train_acc, val_acc, f1))\n",
+    "        \n",
     "pickle.dump(hyperparams, open(\"hyperparams.pkl\", \"wb\"))"
    ]
   },
