More comments to notebook.

--- a/hw1_1.ipynb
+++ b/hw1_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T14:37:59.056674Z",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build vocabulary."
+    "Generate training and test set, and build vocabulary using only words from the training set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T14:38:02.223317Z",
@@ -83,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate word count feature vectors for each document."
+    "Generate word count feature vectors $x_i$ for each document, i.e. $x_{ij} = $ the number of instances of word $j$ in document $i$. Generate labels $y_i$, which equal $0$ for negative documents and $1$ for positive documents."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T14:38:02.228124Z",
@@ -128,15 +128,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load train and test data."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T14:38:02.232171Z",
@@ -152,10 +145,10 @@
      "text": [
       "Train size: 1600\n",
       "Test size: 400\n",
-      "Vocabulary size: 45732\n",
+      "Vocabulary size: 45618\n",
       "\n",
-      "X_train shape: (1600, 45732)\n",
-      "X_test shape: (400, 45732)\n",
+      "X_train shape: (1600, 45618)\n",
+      "X_test shape: (400, 45618)\n",
       "y_train shape: (1600,)\n",
       "y_test shape: (400,)\n"
      ]
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T14:38:02.865171Z",
@@ -202,7 +195,9 @@
     "        self.verbose = verbose\n",
     "    \n",
     "    def fit(self, X, y):\n",
-    "        \n",
+    "        \"\"\"\n",
+    "        Run gradient descent to fit cross entropy loss objective.\n",
+    "        \"\"\"\n",
     "        n, d = X.shape\n",
     "        X_appended = np.concatenate((np.ones((n, 1)), X), axis=1)\n",
     "        if not hasattr(self, 'weights'):\n",
@@ -236,14 +231,18 @@
     "        return self\n",
     "    \n",
     "    def predict(self, X):\n",
-    "        \n",
+    "        \"\"\"\n",
+    "        Predict 1 for positive sentiment and 0 for negative.\n",
+    "        \"\"\"\n",
     "        n = len(X)\n",
     "        X_appended = np.concatenate((np.ones((n, 1)), X), axis=1)\n",
     "        \n",
     "        return (1 + np.sign(np.dot(X_appended, self.weights))) / 2\n",
     "    \n",
     "    def gradient_step(self, X, y):\n",
-    "        \n",
+    "        \"\"\"\n",
+    "        Compute gradient and perform one optimization step.\n",
+    "        \"\"\"\n",
     "        # Use l1 regularization.\n",
     "        \n",
     "        n = len(X)\n",
@@ -260,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See if the code works on a toy example."
+    "Check if the logistic regression code works on a toy example: class-conditional Gaussians, centered at $-\\mu$ for the negative class and $+\\mu$ for the positive class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T15:46:32.929921Z",
@@ -279,16 +278,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 \t cross entropy loss: 0.0240 train accuracy: 0.995\n",
-      "Epoch 1 \t cross entropy loss: 0.0086 train accuracy: 0.997\n",
-      "Epoch 2 \t cross entropy loss: 0.0042 train accuracy: 0.999\n",
-      "Epoch 3 \t cross entropy loss: 0.0036 train accuracy: 0.999\n",
-      "Epoch 4 \t cross entropy loss: 0.0032 train accuracy: 0.999\n",
-      "Epoch 5 \t cross entropy loss: 0.0031 train accuracy: 0.999\n",
-      "Epoch 6 \t cross entropy loss: 0.0029 train accuracy: 1.000\n",
-      "Epoch 7 \t cross entropy loss: 0.0027 train accuracy: 1.000\n",
-      "Epoch 8 \t cross entropy loss: 0.0026 train accuracy: 1.000\n",
-      "Epoch 9 \t cross entropy loss: 0.0023 train accuracy: 1.000\n",
+      "Epoch 0 \t cross entropy loss: 0.6838 train accuracy: 0.700\n",
+      "Epoch 1 \t cross entropy loss: 0.2298 train accuracy: 0.900\n",
+      "Epoch 2 \t cross entropy loss: 0.1388 train accuracy: 0.932\n",
+      "Epoch 3 \t cross entropy loss: 0.0864 train accuracy: 0.961\n",
+      "Epoch 4 \t cross entropy loss: 0.0640 train accuracy: 0.975\n",
+      "Epoch 5 \t cross entropy loss: 0.0477 train accuracy: 0.986\n",
+      "Epoch 6 \t cross entropy loss: 0.0431 train accuracy: 0.986\n",
+      "Epoch 7 \t cross entropy loss: 0.0381 train accuracy: 0.991\n",
+      "Epoch 8 \t cross entropy loss: 0.0362 train accuracy: 0.991\n",
+      "Epoch 9 \t cross entropy loss: 0.0319 train accuracy: 0.993\n",
       "Accuracy: 1.0\n"
      ]
     }
@@ -298,7 +297,7 @@
     "n_te = 100\n",
     "d = 10\n",
     "\n",
-    "mu = 3 * np.ones(d)\n",
+    "mu = np.ones(d)\n",
     "cov = np.eye(d)\n",
     "\n",
     "X_tr = np.concatenate(\n",
@@ -343,12 +342,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run on real data."
+    "Run on Pang and Lee movie review data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-11T15:46:33.149677Z",
@@ -370,23 +369,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 \t cross entropy loss: 4.3637 train accuracy: 0.503\n",
-      "Epoch 20 \t cross entropy loss: 2.8076 train accuracy: 0.652\n",
-      "Epoch 40 \t cross entropy loss: 2.3427 train accuracy: 0.705\n",
-      "Epoch 60 \t cross entropy loss: 2.6716 train accuracy: 0.670\n",
-      "Epoch 80 \t cross entropy loss: 1.4999 train accuracy: 0.784\n",
-      "Epoch 100 \t cross entropy loss: 1.4544 train accuracy: 0.799\n",
-      "Epoch 120 \t cross entropy loss: 1.1044 train accuracy: 0.818\n",
-      "Epoch 140 \t cross entropy loss: 0.8727 train accuracy: 0.855\n",
-      "Epoch 160 \t cross entropy loss: 0.7873 train accuracy: 0.869\n",
-      "Epoch 180 \t cross entropy loss: 0.7384 train accuracy: 0.868\n"
+      "Epoch 0 \t cross entropy loss: 4.2158 train accuracy: 0.506\n",
+      "Epoch 20 \t cross entropy loss: 3.0453 train accuracy: 0.628\n",
+      "Epoch 40 \t cross entropy loss: 2.3171 train accuracy: 0.687\n",
+      "Epoch 60 \t cross entropy loss: 1.9340 train accuracy: 0.734\n",
+      "Epoch 80 \t cross entropy loss: 1.6909 train accuracy: 0.756\n",
+      "Epoch 100 \t cross entropy loss: 1.3230 train accuracy: 0.806\n",
+      "Epoch 120 \t cross entropy loss: 1.1458 train accuracy: 0.820\n",
+      "Epoch 140 \t cross entropy loss: 0.9431 train accuracy: 0.834\n",
+      "Epoch 160 \t cross entropy loss: 0.8340 train accuracy: 0.856\n",
+      "Epoch 180 \t cross entropy loss: 1.4000 train accuracy: 0.787\n"
      ]
     }
    ],
@@ -399,15 +398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6675\n",
-      "F1 score: 0.6825775656324583\n"
+      "Accuracy: 0.745\n",
+      "F1 score: 0.7692307692307693\n"
      ]
     }
    ],
@@ -419,22 +418,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-01-11T15:46:33.230962Z",
-     "iopub.status.busy": "2021-01-11T15:46:33.230618Z",
-     "iopub.status.idle": "2021-01-11T15:46:33.233062Z",
-     "shell.execute_reply": "2021-01-11T15:46:33.233332Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pickle.dump(lr, open(\"model.pkl\", \"wb\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,8 +425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collect positive and negative sentiment words, and discard those that are not in the vocabulary of the movie review data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -451,9 +441,9 @@
      "output_type": "stream",
      "text": [
       "Original number of negative words: 4814\n",
-      "Negative words in vocab: 3003\n",
+      "Negative words in vocab: 2974\n",
       "Original number of positive words: 2036\n",
-      "Positive words in vocab: 1434\n"
+      "Positive words in vocab: 1438\n"
      ]
     }
    ],
@@ -491,13 +481,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X = np.concatenate((X_train, X_test))\n",
-    "y = np.concatenate((y_train, y_test))"
+    "Assess accuracy on test set, as training set was used at least to generate vocabulary. Subtract \"points\" from the prediction for the counts all negative words in the document, and add \"points\" for the counts of all positive words. Predict $1$ for positive score, and $0$ otherwise."
    ]
   },
   {
@@ -507,15 +494,15 @@
    "outputs": [],
    "source": [
     "# Generate predictions.\n",
-    "n, d = X.shape\n",
+    "n, d = X_test.shape\n",
     "\n",
     "scores = np.zeros(n)\n",
     "\n",
     "for word in neg_words:\n",
-    "    scores -= X[:, vocab[word]]\n",
+    "    scores -= X_test[:, vocab[word]]\n",
     "        \n",
     "for word in pos_words:\n",
-    "    scores += X[:, vocab[word]]\n",
+    "    scores += X_test[:, vocab[word]]\n",
     "    \n",
     "y_pred = (scores > 0).astype(int)"
    ]
@@ -529,22 +516,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7035\n",
-      "F1 score: 0.6854111405835545\n"
+      "Accuracy: 0.6775\n",
+      "F1 score: 0.6783042394014962\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy:\", accuracy_score(y, y_pred))\n",
-    "print(\"F1 score:\", f1_score(y, y_pred))"
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"F1 score:\", f1_score(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
